[gd_scene load_steps=6 format=3 uid="uid://bl2geixfl3ad4"]

[ext_resource type="Script" uid="uid://b72osq2fmua8y" path="res://scripts/enemy/beer_enemy_movement.gd" id="1_fsna1"]
[ext_resource type="SpriteFrames" uid="uid://bmy2sxr8fh3pn" path="res://assets/anim/beer_enemy_frames.tres" id="2_fsna1"]
[ext_resource type="Script" uid="uid://d1kql2hkjhux0" path="res://scripts/enemy/beer_enemy_sprite.gd" id="3_fsna1"]
[ext_resource type="Script" uid="uid://bqx8q7u1o36gn" path="res://scripts/enemy/enemy_life.gd" id="4_n7tng"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldt5m"]
size = Vector2(32, 36)

[node name="Enemy" type="RigidBody2D" groups=["enemy"]]
input_pickable = true
script = ExtResource("1_fsna1")

[node name="pop" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_fsna1")
script = ExtResource("3_fsna1")

[node name="EnemyLife" type="Node" parent="."]
script = ExtResource("4_n7tng")
life = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ldt5m")

[connection signal="input_event" from="." to="EnemyLife" method="_on_enemy_input_event"]
[connection signal="this_enemy_death" from="EnemyLife" to="pop" method="_on_this_enemy_death"]
[connection signal="this_enemy_hit" from="EnemyLife" to="pop" method="_on_this_enemy_hit"]
